@@ -118,6 +118,10 @@ AC_ARG_ENABLE(plugin,
 [  --disable-plugin        disable plugin support],
         plugin=$enableval, plugin=yes)
 
+AC_ARG_ENABLE(dbus,
+[  --enable-dbus           enable DBUS support],
+        dbus=$enableval, dbus=yes)
+
 AC_ARG_ENABLE(mmx,
 [  --disable-mmx           disable MMX assembly routines],
         mmx=$enableval, mmx=yes)
@@ -460,6 +464,24 @@ if test "$plugin" = yes; then
 	fi
 fi
 
+dnl #######################################################################
+dnl # Check for DBUS libraries
+dnl #######################################################################
+
+if test "x$dbus" = "xyes" ; then
+   AC_CHECK_PROG(dbus, dbus-binding-tool, yes, no)
+fi
+
+if test "x$dbus" = "xyes" ; then
+   	PKG_CHECK_MODULES(DBUS, [dbus-1 >= 0.35 dbus-glib-1 >= 0.35],
+	[
+		dbus=yes
+	],
+	[
+		dbus=no
+	])
+fi
+
 dnl *********************************************************************
 dnl ** CONDITIONALS *****************************************************
 dnl *********************************************************************
@@ -471,6 +493,7 @@ AM_CONDITIONAL(DO_PERL, test "x$perl" = "xyes")
 AM_CONDITIONAL(DO_PYTHON, test "x$python" = "xyes")
 AM_CONDITIONAL(DO_TCL, test "x$tcl" = "xyes")
 AM_CONDITIONAL(DO_PLUGIN, test "x$plugin" = "xyes")
+AM_CONDITIONAL(DO_DBUS, test "x$dbus" = "xyes")
 
 dnl *********************************************************************
 dnl ** SOCKS5 ***********************************************************
@@ -674,6 +697,9 @@ AC_SUBST(PY_CFLAGS)
 AC_SUBST(PY_LIBS)
 AC_SUBST(TCL_LIBS)
 AC_SUBST(TCL_CFLAGS)
+AC_SUBST(DBUS_CFLAGS)
+AC_SUBST(DBUS_LIBS)
+
 
 PLUGIN_INCLUDES='-I$(top_srcdir)/plugins'
 AC_SUBST(PLUGIN_INCLUDES)
@@ -705,6 +731,7 @@ plugins/Makefile
 plugins/python/Makefile
 plugins/perl/Makefile
 plugins/tcl/Makefile
+plugins/dbus/Makefile
 intl/Makefile
 po/Makefile.in
 ])
@@ -715,7 +742,7 @@ echo
 echo Building GTK+ Interface .... : $gtkfe
 echo Building TEXT Interface .... : $textfe
 echo
-echo PLUGINS: Perl: $perl Python: $python TCL: $tcl
+echo PLUGINS: Perl: $perl Python: $python TCL: $tcl DBUS: $dbus
 echo
 echo mmx tinting ......... : $mmx
 echo XShm tinting ........ : $shm\	plugin interface .... : $plugin
