@@ -1,0 +1,16 @@
+<?xml version="1.0" encoding="UTF-8" ?>
+
+<node name="/">
+  <interface name="org.xchat.interface">
+    <method name="command">
+      <arg type="s"/>
+    </method>
+    <method name="print">
+      <arg type="s"/>
+    </method>
+    <method name="context">
+      <arg type="s"/>
+      <arg type="s"/>
+    </method>
+  </interface>
+</node>
